popup z-index fix

--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -9,10 +9,11 @@
 
   .popup {
     position: absolute;
+    z-index: 10;
     top: 86%;
     left: 82%;
-    background-color: rgba(255, 255, 255, 0.6);
-    backdrop-filter: blur(3px); // самый жёсткий и навороченный фильтер за всю мою жизнь я в шоке
+    background-color: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(4px); // самый жёсткий и навороченный фильтер за всю мою жизнь я в шоке
     border: 2px solid #ddd;
     border-radius: 30px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
